# smart-financial-platform

./: .dockerignore  .env.example  .flake8  .gitignore  .pylintrc  .replit  ACCESSIBILITY.md  API_INTEGRATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EULA.txt  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  WHITELIST_RESELLER_SYSTEM.md  budget_breakdown.md  create_education_tables.py  create_reseller_demo.py  docker-compose.yml  executive_summary.md  funding_pitch_slides.md  funding_proposal.md  impact_metrics.md  index.html  main.py  models.py  models_additions.py  models_asl_support.py  models_education.py  models_import.py  models_licensing.py  models_reseller.py  nginx.conf  pyproject.toml  pyproject.toml.black  pytest.ini  (+8 more)
api/: deaf_first_api.py  dhh_endpoints.py  health.py  miniapps.py  webhooks.py
app/: __init__.py  config.py  models.py
attached_assets/: Commands for Mini Apps in Sms, Telegram, Discord,  ab4ff818aa5742c9956ab464d3c417c2_1758247635295.md  Open Insurance - Start Here.postman_collection_1758246455946.json  Pasted--DEAF-FIRST-Data-Driven-TechFW-Pitch-Deck-THE-PROBLEM-Market-Reality-Deaf-Community-Fin-1744766885606.txt  Pasted--Database-Design-for-Deaf-First-Platform-Accessible-to-Investors-Shareholders-Beta-Users-Here-s-1744903196976.txt  Pasted--Deaf-Community-Specialized-Insurance-Products-Market-Need-Analysis-Underserved-Insurance--1758247219858_1758247219860.txt  Pasted--MBTQ-Group-Hybrid-Flask-FastAPI-Architecture-Business-Architecture-Overview-MBTQ--1758251099734_1758251099734.txt  Pasted--MBTQ-Mini-Apps-Multi-Platform-Command-System-Command-Structure-Implementation-Core-Com-1758246553659_1758246553660.txt  Pasted--SIDE-Integration-Quantum-Tax-Optimization-Deep-Technical-Architecture-SIDE-Real-Estate-1758246587563_1758246587564.txt  Pasted--pt-A-headless-CMS-is-a-content-management-system-that-provides-content-via-APIs-leaving-th-1744851893863.txt  Pasted-Basic-Lingo-Personal-Lines-Any-kind-of-insurance-that-covers-individuals-against-loss-that-results--1744400186271.txt  Pasted-Coverage-Type-Mandatory-Components-Optional-Components-Standard-Market-Practice-Deaf-First-Different-1744402036993.txt  Pasted-Creating-a-simple-API-for-a-deaf-first-digital-platform-involves-designing-endpoints-that-cater-to-1744890295875.txt  Pasted-Here-s-a-structured-End-to-End-Project-Workflow-that-covers-all-phases-from-initiation-to-comple-1744918902022.txt  Pasted-I-ll-create-a-comprehensive-mini-app-command-system-for-MBTQ-s-multi-platform-messaging-integration--1758246572534_1758246572534.txt  Pasted-I-ll-help-you-craft-a-detailed-approach-to-present-DEAF-FIRST-to-TechFW-effectively-Let-s-develop-a-1744766953432.txt  database.types  (+4 more)
config/: environments.py  logging_config.py  security.py  (+1 more)
(+173 files in other folders)
