[project]
name = "mbtq-smart-financial-platform"
version = "1.0.0"
description = "MBTQ Smart Financial Platform - DHH-focused financial services"
requires-python = ">=3.11"
dependencies = [
    # Core Flask
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-cors>=4.0.0",
    
    # Security
    "flask-talisman>=1.1.0",
    "flask-limiter>=3.13",
    "cryptography>=46.0.1",
    "email-validator>=2.2.0",
    
    # Database
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.0",
    
    # Production Server
    "gunicorn>=23.0.0",
    
    # Caching & Sessions
    "redis>=5.0.0",
    "flask-caching>=2.1.0",
    
    # External Services
    "mux-python>=5.0.0",
    "openai>=1.108.0",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    
    # Utilities
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    
    # Logging & Monitoring
    "python-json-logger>=2.0.7",
    "sentry-sdk[flask]>=1.40.0",
    
    # System Monitoring
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.2.0",
    
    # Code Quality
    "black>=23.12.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    
    # Security Scanning
    "bandit>=1.7.5",
    "safety>=3.0.0",
    
    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | attached_assets
  | static/vendor
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --strict-config --showlocals --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "api: API endpoint tests",
    "dhh: DHH-specific functionality tests",
]

[tool.coverage.run]
source = ["services", "api"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
